--- a/L01_Example/L01_Example.ioc
+++ b/L01_Example/L01_Example.ioc
@@ -13,35 +13,37 @@ Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG6
-Mcu.Pin17=PG7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PG6
+Mcu.Pin19=PG7
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PG11
-Mcu.Pin26=PG13
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PG11
+Mcu.Pin28=PG13
+Mcu.Pin29=PB3
 Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=PB7
+Mcu.Pin31=VP_SYS_VS_Systick
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=30
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -89,6 +91,10 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Signal=ETH_MDIO
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=LD4 [Blue]
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -121,6 +127,11 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC0.GPIO_Label=EXT_Btn [PULL-UP]
+PC0.GPIO_PuPd=GPIO_PULLUP
+PC0.Locked=true
+PC0.Signal=GPIO_Input
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
