--- a/L03_Example/L03_Example.ioc
+++ b/L03_Example/L03_Example.ioc
@@ -43,13 +43,14 @@ Mcu.Pin32=PB3
 Mcu.Pin33=PB7
 Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM2_VS_OPM
 Mcu.Pin4=PF5
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC0
 Mcu.Pin8=PC1
 Mcu.Pin9=PC3
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -343,6 +344,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_OPM.Mode=OPM_bit
+VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 board=NUCLEO-F746ZG
 boardIOC=true
 isbadioc=false
