--- a/L04_Example/L04_Example.ioc
+++ b/L04_Example/L04_Example.ioc
@@ -9,8 +9,9 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -19,40 +20,42 @@ Mcu.Pin10=PA1
 Mcu.Pin11=PA2
 Mcu.Pin12=PA3
 Mcu.Pin13=PA5
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB0
-Mcu.Pin18=PB10
-Mcu.Pin19=PB11
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB10
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PB13
-Mcu.Pin21=PB14
-Mcu.Pin22=PD8
-Mcu.Pin23=PD9
-Mcu.Pin24=PG6
-Mcu.Pin25=PG7
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
+Mcu.Pin20=PB11
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PD8
+Mcu.Pin24=PD9
+Mcu.Pin25=PG6
+Mcu.Pin26=PG7
+Mcu.Pin27=PC7
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PF3
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PG11
-Mcu.Pin34=PG13
-Mcu.Pin35=PB3
-Mcu.Pin36=PB7
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PG11
+Mcu.Pin36=PG13
+Mcu.Pin37=PB3
+Mcu.Pin38=PB7
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PF5
+Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC0
 Mcu.Pin8=PC1
 Mcu.Pin9=PC3
-Mcu.PinsNb=39
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -112,6 +115,9 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LED_RGB_R [Red channel]
 PA5.Locked=true
 PA5.Signal=S_TIM2_CH1_ETR
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ENC_CLK
+PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -185,6 +191,9 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Signal=ETH_RXD1
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=ENC_DT
+PC7.Signal=S_TIM3_CH2
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -355,12 +364,20 @@ SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
 SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
+SH.S_TIM3_CH2.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM2.Period=9999
 TIM2.Prescaler=107
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=15
+TIM3.IPParameters=Period,EncoderMode,IC1Filter
+TIM3.Period=400
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
