--- a/L04_Example/L04_Example.ioc
+++ b/L04_Example/L04_Example.ioc
@@ -265,7 +265,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -376,8 +376,10 @@ TIM2.Period=9999
 TIM2.Prescaler=107
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=15
-TIM3.IPParameters=Period,EncoderMode,IC1Filter
+TIM3.IC2Filter=15
+TIM3.IPParameters=Period,EncoderMode,IC1Filter,IC2Filter,Prescaler
 TIM3.Period=400
+TIM3.Prescaler=0
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
