--- a/L12_Example/L12_Example.ioc
+++ b/L12_Example/L12_Example.ioc
@@ -20,14 +20,17 @@ Mcu.CPN=STM32F746ZGT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
+Mcu.IP10=TIM11
+Mcu.IP11=USART3
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=TIM5
+Mcu.IP6=TIM3
 Mcu.IP7=TIM6
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP8=TIM7
+Mcu.IP9=TIM10
+Mcu.IPNb=12
 Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -99,11 +102,13 @@ Mcu.Pin68=PB8
 Mcu.Pin69=PB9
 Mcu.Pin7=PC15/OSC32_OUT
 Mcu.Pin70=VP_SYS_VS_Systick
-Mcu.Pin71=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin72=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin71=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin72=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin73=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin74=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin8=PF3
 Mcu.Pin9=PF5
-Mcu.PinsNb=73
+Mcu.PinsNb=75
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -112,6 +117,7 @@ MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -120,6 +126,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
@@ -452,7 +460,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM10_Init-TIM10-false-HAL-true,9-MX_TIM11_Init-TIM11-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -557,27 +565,42 @@ SH.S_TIM2_CH3.0=TIM2_CH3
 SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4
 SH.S_TIM2_CH4.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2
 SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM5_CH4.0=TIM5_CH4
 SH.S_TIM5_CH4.ConfNb=1
-TIM5.IPParameters=Prescaler
-TIM5.Prescaler=107
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=49999
+TIM10.Prescaler=107
+TIM11.IPParameters=Prescaler,Period
+TIM11.Period=49999
+TIM11.Prescaler=107
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=15
+TIM3.IC2Filter=15
+TIM3.IPParameters=Period,EncoderMode,IC1Filter,IC2Filter
+TIM3.Period=400
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=999
 TIM6.Prescaler=107
+TIM7.IPParameters=Prescaler
+TIM7.Prescaler=107
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM5_VS_ClockSourceINT.Mode=Internal
-VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-F746ZG
 boardIOC=true
 isbadioc=false
