--- a/L06_Example/L06_Example.ioc
+++ b/L06_Example/L06_Example.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -226,16 +229,22 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=BMP2_SCL
 PE2.Locked=true
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=SPI4_CS
+PE4.GPIO_Label=BMP2_CS1
 PE4.Locked=true
 PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=BMP2_SDO
 PE5.Locked=true
 PE5.Mode=Full_Duplex_Master
 PE5.Signal=SPI4_MISO
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=BMP2_SDA
 PE6.Locked=true
 PE6.Mode=Full_Duplex_Master
 PE6.Signal=SPI4_MOSI
@@ -295,6 +304,7 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=L06_Example.ioc
 ProjectManager.ProjectName=L06_Example
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
